<?xml version="1.0" encoding="utf-8"?>



<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.chaplin.realtimevoicetranslation.settings.UserImagePreference
        android:key="userImage"
        android:layout="@layout/preference_user_image"
        app:iconSpaceReserved="false" />

    <com.chaplin.realtimevoicetranslation.settings.UserNamePreference
        android:key="changeName"
        android:layout="@layout/preference_user_name"
        app:iconSpaceReserved="false" />

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_input"
        app:iconSpaceReserved="false">
        <com.chaplin.realtimevoicetranslation.settings.SeekBarPreference
            android:key="micSensibilitySetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_language"
        app:iconSpaceReserved="false">
        <com.chaplin.realtimevoicetranslation.settings.SupportTtsQualityPreference
            android:defaultValue="false"
            android:key="languagesQualityLow"
            android:title="@string/preference_title_support_tts_quality"
            android:summary="@string/preference_description_support_tts_quality"
            app:iconSpaceReserved="false" />
        <com.chaplin.realtimevoicetranslation.settings.LanguagePreference
            android:key="language"
            android:title="@string/preference_title_language"
            android:dialogTitle="Application language"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_output"
        app:iconSpaceReserved="false">
        <androidx.preference.Preference
            android:key="tts"
            android:title="@string/preference_title_tts"
            android:summary="@string/preference_description_tts"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_advanced"
        app:iconSpaceReserved="false">
        <com.chaplin.realtimevoicetranslation.settings.SeekBarPreference
            android:key="SpeechTimeoutSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
        <com.chaplin.realtimevoicetranslation.settings.SeekBarPreference
            android:key="PrevVoiceDurationSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>